<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/resultCrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@null"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_control"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/img_ab"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnDone"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="doFinish"
            android:text="@string/accept"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnCrop"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="doCrop"
            android:text="@string/crop"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="doCancel"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnReCrop"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="doReCrop"
            android:text="@string/recrop"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        >

        <ImageButton
            android:id="@+id/btnRotateLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:onClick="rotateLeft"
            android:src="@drawable/btn_rotate_left" />

        <ImageButton
            android:id="@+id/btnRotateRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:onClick="rotateRight"
            android:src="@drawable/btn_rotate_right" />
    </LinearLayout>

</RelativeLayout>