<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/padding_medium" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="@dimen/login_logo_height"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:contentDescription="@string/content_description"
        android:src="@drawable/login_logo" />

    <RelativeLayout
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp" >

        <RelativeLayout
            android:id="@+id/loginform"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_form" >

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/blank"
                android:hint="@string/login_username"
                android:inputType="textNoSuggestions"
                android:lines="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textSize="@dimen/textsize_general" >

                <requestFocus />
            </EditText>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txt_username"
                android:background="#9a9a9a" >
            </View>

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/divider"
                android:layout_toLeftOf="@+id/btn_show_password"
                android:background="@drawable/blank"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textSize="@dimen/textsize_general" />

            <CheckBox
                android:id="@+id/btn_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/txt_password"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/divider"
                android:textColor="#000000" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginform"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login"
            android:text="@string/login_btn_login"
            android:textColor="#ffffff"
            android:textSize="@dimen/textsize_general" />

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btn_login"
            android:text="@string/login_recover_password"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_register"
            android:text="@string/login_btn_register"
            android:textColor="#ffffff"
            android:textSize="@dimen/textsize_general" />
    </RelativeLayout>

</RelativeLayout>