<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/img_ab" >

        <com.zoostudio.ngon.views.ButtonUp
            android:id="@+id/btn_up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_ab_default" >
        </com.zoostudio.ngon.views.ButtonUp>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btn_up"
            android:layout_alignTop="@id/btn_up"
            android:layout_toLeftOf="@+id/divider"
            android:layout_toRightOf="@id/btn_up"
            android:gravity="center_vertical"
            android:paddingLeft="15dip"
            android:text="@string/recoverpass_title"
            android:textColor="@color/NgonDoWhite"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/btn_register"
            android:background="@drawable/img_ab_divider" />

        <Button
            android:id="@+id/btn_register"
            style="@style/ButtonActionBar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/register_btn_register" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/registerform"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_form"
        android:orientation="vertical"
        android:padding="10dp" >

        <AutoCompleteTextView
            android:id="@+id/txt_email"
            style="@style/NgonDoEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recoverpass_email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" >

            <requestFocus />
        </AutoCompleteTextView>

        <AutoCompleteTextView
            android:id="@+id/txt_phone"
            style="@style/NgonDoEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txt_email"
            android:enabled="false"
            android:hint="@string/recoverpass_phone"
            android:inputType="phone"
            android:maxLines="3" />
    </RelativeLayout>

</RelativeLayout>